--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -117,6 +117,23 @@
                 //"P_2020",
                 "tza"
             ]
+        }, 
+        {
+            "name": "Py: building_disagg_baseline.py",
+            "type": "python",
+            "request": "launch",
+            "program": "building_disagg_baseline.py",
+            "console": "integratedTerminal",
+            "env": {//"DISPLAY":":1",
+                "PYTHONPATH": "${workspaceRoot}",
+                "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
+            "args": [
+                "preprocessed_data_3.pkl",
+                "../../../data/OtherBuildings/TZA/tza_subnational_2000_2020_sid.tif",
+                "output_dir/",
+                //"P_2020",
+                "tza"
+            ]
         },
         {
             "name": "TZA superpixel_disagg_model.py",
