--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -912,7 +912,8 @@
             "args": [ 
                 "-train", "rwa",
                 "-train_lvl", "f,f,f,f,f,f",
-                "-test", "cod,moz,nga,uga,rwa,tza",
+                // "-test", "cod,moz,nga,uga,rwa,tza",
+                "-test", "tza",
                 "-lr", "0.0001",
                 "-optim", "adam",
                 "-wr", "0.01",
@@ -921,7 +922,8 @@
                 "-lstep", "8000",
                 "-rs", "3",
                 "-mm", "d,d,d,d,d,d",
-                "--loss", "laplaceNLL",
+                "--loss", "NormL1",
+                // "--loss", "laplaceNLL",
                 "--input_scaling", "True",
                 "--output_scaling", "True",
                 //"-e5f", "efficient-darkness-1637,super-river-1631,giddy-darkness-1639,treasured-universe-1635,vibrant-silence-1636",
