changes to the loss function implementations

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -238,7 +238,7 @@
                 "-wr", "0.01",
                 "--dropout", "0.4",
                 "-optim", "adam",
-                "--loss", "l1",
+                "--loss", "mse",
                 "-wr", "0.00001",
                 "-adamwr", "0.",
                 "-lstep", "200",
