--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -246,6 +246,7 @@
                 "--loss", "mse", 
                 "--input_scaling", "True",
                 "--output_scaling", "True",
+                "random_seed_folds", "1611",
                 "--sampler", "custom","--max_step", "100000",
                 "--name", "this-is-a-test-run-for-naming"
             ]
@@ -276,6 +277,7 @@
                 "--input_scaling", "True",
                 "--output_scaling", "True",
                 "--sampler", "custom","--max_step", "100000",
+                // "random_seed_folds", "1611",
                 "--name", "this-is-a-test-run-for-naming-eval",
                 "-e5f", "this-is-a-test-run-for-naming_0,this-is-a-test-run-for-naming_1,this-is-a-test-run-for-naming_2,this-is-a-test-run-for-naming_3,this-is-a-test-run-for-naming_4",
                 "-e5fmt", "best_r2",
