--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -964,7 +964,7 @@
                 "-lr", "0.0001",
                 "-optim", "adam",
                 "-wr", "0.01",
-                "--dropout", "0.4",
+                //"--dropout", "0.4",
                 "-adamwr", "0.",
                 "-lstep", "80",
                 "-rs", "1610",
