upload bugfix in eval

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -964,19 +964,19 @@
                 "-lr", "0.0001",
                 "-optim", "adam",
                 "-wr", "0.01",
-                //"--dropout", "0.4",
+                "--dropout", "0.4",
                 "-adamwr", "0.",
                 "-lstep", "80",
-                "-rs", "1610",
-                "-rsf", "1610",
+                "-rs", "1612",
+                "-rsf", "1612",
                 "-mm", "d,d,d,d,d,d",
-                "--loss", "laplaceNLL",
+                "--loss", "LogL1",
                 // "--loss", "laplaceNLL",
                 "--input_scaling", "True",
                 "--output_scaling", "True",
                 //"-e5f", "efficient-darkness-1637,super-river-1631,giddy-darkness-1639,treasured-universe-1635,vibrant-silence-1636",
                 "--e5f_metric", "best_mape_avg",
-                "-e5f", "transfer_LogL1_1610_1,transfer_LogL1_1610_2,transfer_LogL1_1610_3,transfer_LogL1_1610_4,transfer_LogL1_1610_5",
+                "-e5f", "transfer_LogL1_1612_1do,transfer_LogL1_1612_2do,transfer_LogL1_1612_3do,transfer_LogL1_1612_4do,transfer_LogL1_1612_5do",
             ]
         },
         {
