upload bug fix and evaluation 5fold country wide disag

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -964,11 +964,11 @@
                 "-lr", "0.0001",
                 "-optim", "adam",
                 "-wr", "0.01",
-                "--dropout", "0.4",
+                //"--dropout", "0.4",
                 "-adamwr", "0.",
                 "-lstep", "80",
-                "-rs", "1612",
-                "-rsf", "1612",
+                "-rs", "1613",
+                "-rsf", "1613",
                 "-mm", "d,d,d,d,d,d",
                 "--loss", "LogL1",
                 // "--loss", "laplaceNLL",
@@ -976,7 +976,8 @@
                 "--output_scaling", "True",
                 //"-e5f", "efficient-darkness-1637,super-river-1631,giddy-darkness-1639,treasured-universe-1635,vibrant-silence-1636",
                 "--e5f_metric", "best_mape_avg",
-                "-e5f", "transfer_LogL1_1612_1do,transfer_LogL1_1612_2do,transfer_LogL1_1612_3do,transfer_LogL1_1612_4do,transfer_LogL1_1612_5do",
+                "--name", "transfer_LogL1_1613_Xallo",
+                "-e5f", "transfer_LogL1_1613_1allo,transfer_LogL1_1613_2allo,transfer_LogL1_1613_3allo,transfer_LogL1_1613_4allo,transfer_LogL1_1613_5allo",
             ]
         },
         {
