upload json and sh files

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -242,9 +242,10 @@
                 "-lstep", "400",
                 "--validation_fold", "0",
                 "-rs", "0",
-                "-mm", "d", 
+                //"-rsf", "1610",
+                "-mm", "m", 
                 "--loss", "LogL1", 
-                "--kernel_size", "3,3,3,3",
+                "--kernel_size", "1,1,1,1",
                 "--input_scaling", "True",
                 "--output_scaling", "True",
                 "--random_seed_folds", "1610",
