bug fix to conv NN with bayesian loss

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -244,11 +244,11 @@
                 "-rs", "1613",
                 "-rsf", "1613",
                 "-mm", "m", 
-                "--loss", "LogL1", 
+                "--loss", "gaussNLL", 
                 "--kernel_size", "1,1,1,1",
                 "--admin_augment", "False",
-                "--population_target", "True",
-                "--input_scaling", "True",
+                //"--population_target", "True",
+                //"--input_scaling", "True",
                 "--output_scaling", "True",
                 "--random_seed_folds", "1610",
                 "--sampler", "custom",
