--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -232,7 +232,7 @@
                 "PYDEVD_WARN_EVALUATION_TIMEOUT": "500"},
             "args": [
                 "-train", "tza",
-                "-train_lvl", "f",
+                "-train_lvl", "c",
                 "-test", "tza",
                 "-lr", "0.0001",
                 "-wr", "0.01",
@@ -244,11 +244,11 @@
                 "-rs", "1613",
                 "-rsf", "1613",
                 "-mm", "m", 
-                "--loss", "gaussNLL", 
-                "--kernel_size", "1,1,1,1",
-                "--admin_augment", "False",
+                "--loss", "LogL1", 
+                "--kernel_size", "3,1,1,1",
+                "--admin_augment", "True",
                 //"--population_target", "True",
-                //"--input_scaling", "True",
+                "--input_scaling", "True",
                 "--output_scaling", "True",
                 "--random_seed_folds", "1610",
                 "--sampler", "custom",
